--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -35,3 +35,9 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'WebApp_artifacts'
+    publishLocation: 'Container'
