--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,6 +5,6 @@ metadata:
 spec:
     type: LoadBalancer
     ports:
-    - port: 8020 from dev branch
+    - port: 8020 from dev branch..
     selector:
         app: aksimage
