Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -50,3 +50,15 @@ steps:
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: '**'
+    TargetFolder: '$(build.artifactstagingdirectory)'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'DevOps-artict777'
+    publishLocation: 'Container'
