--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,16 +1,16 @@
-apiVersion : apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: aksimage 
 spec:
-  replicas: 6000
+  replicas: 2
   selector:
     matchLabels:
       app: aksimage
   template:
     metadata:
-      labels: 6000
-        app: aksimage 
+      labels:
+        app: aksimage
     spec:
       containers:
         - name: aksimage 
