--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -19,7 +19,10 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
+    command: 'restore'
     restoreSolution: '$(solution)'
+    feedsToUse: 'select'
+    verbosityRestore: 'Quiet'
 
 - task: SonarCloudPrepare@1
   inputs:
