--- a/azure-pipelines-7.yml
+++ b/azure-pipelines-7.yml
@@ -44,4 +44,6 @@ steps:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: '$(Build.BuildId)-first-artifact'
     publishLocation: 'Container'
+    StoreAsTar: true
+
 
